--- a/locales/zh-CN/chat.json
+++ b/locales/zh-CN/chat.json
@@ -112,9 +112,9 @@
   },
   "updateAgent": "更新助理信息",
   "upload": {
-    "actionTooltip": "上传图片",
+    "actionTooltip": "上传文件",
     "disabled": "当前模型不支持视觉识别，请切换模型后使用",
     "dragDesc": "拖拽文件到这里，支持上传多个图片。按住 Shift 直接发送图片",
-    "dragTitle": "上传图片"
+    "dragTitle": "上传文件"
   }
 }
