--- a/locales/bg-BG/setting.json
+++ b/locales/bg-BG/setting.json
@@ -105,13 +105,17 @@
         "title": "API ключ"
       }
     },
-    "groq": {
-      "title": "Groq",
-      "token": {
-        "desc": "Въведете API Key, получен от Groq",
-        "placeholder": "Groq API Key",
-        "title": "API ключ"
-      }
+    "fetcher": {
+      "fetch": "Изтегляне на списъка с модели",
+      "fetching": "Изтегляне на списъка с модели...",
+      "latestTime": "Последно актуализирано: {{time}}",
+      "noLatestTime": "В момента няма наличен списък"
+    },
+    "modelList": {
+      "desc": "Изберете модел, който да се показва по време на разговор. Избраният модел ще бъде показан в списъка с модели.",
+      "placeholder": "Моля, изберете модел от списъка",
+      "title": "Списък с модели",
+      "total": "Общо {{count}} налични модела"
     },
     "mistral": {
       "title": "Mistral AI",
