--- a/locales/nl-NL/setting.json
+++ b/locales/nl-NL/setting.json
@@ -105,13 +105,17 @@
         "title": "API Key"
       }
     },
-    "groq": {
-      "title": "Groq",
-      "token": {
-        "desc": "Voer de API Key van Groq in",
-        "placeholder": "Groq API Key",
-        "title": "API Key"
-      }
+    "fetcher": {
+      "fetch": "Haal model lijst op",
+      "fetching": "Model lijst wordt opgehaald...",
+      "latestTime": "Laatst bijgewerkt: {{time}}",
+      "noLatestTime": "Geen lijst beschikbaar op dit moment"
+    },
+    "modelList": {
+      "desc": "Selecteer het model dat in de sessie moet worden weergegeven. Het geselecteerde model wordt weergegeven in de modellijst.",
+      "placeholder": "Selecteer een model uit de lijst",
+      "title": "Modellijst",
+      "total": "In totaal {{count}} modellen beschikbaar"
     },
     "mistral": {
       "title": "Mistral AI",
