--- a/locales/fr-FR/setting.json
+++ b/locales/fr-FR/setting.json
@@ -105,13 +105,17 @@
         "title": "Clé API"
       }
     },
-    "groq": {
-      "title": "Groq",
-      "token": {
-        "desc": "Entrez la clé API provenant de Groq",
-        "placeholder": "Clé API Groq",
-        "title": "Clé API"
-      }
+    "fetcher": {
+      "fetch": "Obtenir la liste des modèles",
+      "fetching": "Récupération de la liste des modèles en cours...",
+      "latestTime": "Dernière mise à jour : {{time}}",
+      "noLatestTime": "Aucune mise à jour disponible"
+    },
+    "modelList": {
+      "desc": "Sélectionnez les modèles à afficher dans la session. Les modèles sélectionnés seront affichés dans la liste des modèles.",
+      "placeholder": "Veuillez sélectionner un modèle dans la liste",
+      "title": "Liste des modèles",
+      "total": "{{count}} modèles disponibles au total"
     },
     "mistral": {
       "title": "Mistral AI",
