--- a/locales/it-IT/setting.json
+++ b/locales/it-IT/setting.json
@@ -105,13 +105,17 @@
         "title": "API Key"
       }
     },
-    "groq": {
-      "title": "Groq",
-      "token": {
-        "desc": "Inserisci la tua API Key fornita da Groq",
-        "placeholder": "Groq API Key",
-        "title": "API Key"
-      }
+    "fetcher": {
+      "fetch": "Ottenere l'elenco dei modelli",
+      "fetching": "Recupero dell'elenco dei modelli in corso...",
+      "latestTime": "Ultimo aggiornamento: {{time}}",
+      "noLatestTime": "Nessun elenco disponibile al momento"
+    },
+    "modelList": {
+      "desc": "Seleziona i modelli da visualizzare durante la sessione, i modelli selezionati verranno mostrati nell'elenco dei modelli",
+      "placeholder": "Seleziona un modello dall'elenco",
+      "title": "Elenco dei modelli",
+      "total": "Totale modelli disponibili: {{count}}"
     },
     "mistral": {
       "title": "Mistral AI",
