--- a/locales/ja-JP/setting.json
+++ b/locales/ja-JP/setting.json
@@ -105,13 +105,17 @@
         "title": "APIキー"
       }
     },
-    "groq": {
-      "title": "Groq",
-      "token": {
-        "desc": "GroqからのAPIキーを入力してください",
-        "placeholder": "Groq API Key",
-        "title": "APIキー"
-      }
+    "fetcher": {
+      "fetch": "モデルリストを取得する",
+      "fetching": "モデルリストを取得中...",
+      "latestTime": "最終更新時間：{{time}}",
+      "noLatestTime": "リストを取得していません"
+    },
+    "modelList": {
+      "desc": "セッションで表示するモデルを選択します。選択したモデルはモデルリストに表示されます",
+      "placeholder": "モデルをリストから選択してください",
+      "title": "モデルリスト",
+      "total": "合計 {{count}} 個のモデルが利用可能です"
     },
     "mistral": {
       "title": "Mistral AI",
