--- a/locales/ko-KR/setting.json
+++ b/locales/ko-KR/setting.json
@@ -105,13 +105,17 @@
         "title": "API 키"
       }
     },
-    "groq": {
-      "title": "Groq",
-      "token": {
-        "desc": "Groq에서 제공한 API 키를 입력하세요",
-        "placeholder": "Groq API 키",
-        "title": "API 키"
-      }
+    "fetcher": {
+      "fetch": "모델 목록 가져오기",
+      "fetching": "모델 목록을 가져오는 중...",
+      "latestTime": "마지막 업데이트 시간: {{time}}",
+      "noLatestTime": "목록을 아직 가져오지 않았습니다"
+    },
+    "modelList": {
+      "desc": "대화에서 표시할 모델을 선택하세요. 선택한 모델은 모델 목록에 표시됩니다",
+      "placeholder": "모델을 선택하세요",
+      "title": "모델 목록",
+      "total": "총 {{count}} 개 모델 사용 가능"
     },
     "mistral": {
       "title": "Mistral AI",
