--- a/locales/zh-CN/setting.json
+++ b/locales/zh-CN/setting.json
@@ -105,13 +105,17 @@
         "title": "API Key"
       }
     },
-    "groq": {
-      "title": "Groq",
-      "token": {
-        "desc": "填入来自 Groq 的 API Key",
-        "placeholder": "Groq API Key",
-        "title": "API Key"
-      }
+    "fetcher": {
+      "fetch": "获取模型列表",
+      "fetching": "正在获取模型列表...",
+      "latestTime": "上次更新时间：{{time}}",
+      "noLatestTime": "暂未获取列表"
+    },
+    "modelList": {
+      "desc": "选择在会话中展示的模型，选择的模型会在模型列表中展示",
+      "placeholder": "请从列表中选择模型",
+      "title": "模型列表",
+      "total": "共 {{count}} 个模型可用"
     },
     "mistral": {
       "title": "Mistral AI",
