--- a/locales/zh-TW/setting.json
+++ b/locales/zh-TW/setting.json
@@ -105,13 +105,17 @@
         "title": "API Key"
       }
     },
-    "groq": {
-      "title": "Groq",
-      "token": {
-        "desc": "填入來自 Groq 的 API Key",
-        "placeholder": "Groq API Key",
-        "title": "API Key"
-      }
+    "fetcher": {
+      "fetch": "獲取模型列表",
+      "fetching": "正在獲取模型列表...",
+      "latestTime": "上次更新時間：{{time}}",
+      "noLatestTime": "暫未獲取列表"
+    },
+    "modelList": {
+      "desc": "選擇在會話中展示的模型，選擇的模型會在模型列表中展示",
+      "placeholder": "請從列表中選擇模型",
+      "title": "模型列表",
+      "total": "共 {{count}} 個模型可用"
     },
     "mistral": {
       "title": "Mistral AI",
