fix welcome text

--- a/locales/ar/welcome.json
+++ b/locales/ar/welcome.json
@@ -4,6 +4,40 @@
     "market": "تسوق في السوق",
     "start": "ابدأ الآن"
   },
+  "guide": {
+    "agents": {
+      "replaceBtn": "تغيير",
+      "title": "إضافة توصيات المساعدين:"
+    },
+    "defaultMessage": "أنا LobeChat، مساعدك الذكي الشخصي. كيف يمكنني مساعدتك اليوم؟\nإذا كنت بحاجة إلى مساعد أكثر احترافية أو تخصيصًا، يمكنك النقر على `+` لإنشاء مساعد مخصص",
+    "qa": {
+      "q01": "ما هو نموذجك وما هي وظيفته؟",
+      "q02": "كيفية كتابة مقال أو قصة مشوقة؟",
+      "q03": "كيف يمكن التحضير لإلقاء خطاب أو تقرير ممتاز؟",
+      "q04": "كيفية تطوير عادات واستراتيجيات دراسة فعالة؟",
+      "q05": "كيفية إنشاء مساحة دراسة فعالة في المنزل؟",
+      "q06": "ما هي استراتيجيات القراءة التي يمكن أن تساعد على فهم النصوص المعقدة؟",
+      "q07": "كيف يمكن الحفاظ على الدافعية الدراسية في حياة مزدحمة وعملية؟",
+      "q08": "كيفية قبول النقد بأسلوب أنيق والتعلم منه؟",
+      "q09": "كيفية زيادة فعالية تعلم اللغة؟",
+      "q10": "كيفية إدارة وتخفيف قلق الامتحان؟",
+      "q11": "كيفية تحقيق توازن بين العمل والدراسة والحياة الشخصية؟",
+      "q12": "كيفية تألق في المقابلات الشخصية؟",
+      "q13": "كيفية الحفاظ على وتطوير الشبكة المهنية؟",
+      "q14": "كيفية تحسين السيرة الذاتية الشخصية لجذب اهتمام أصحاب العمل؟",
+      "q15": "كيفية اكتساب مهارة جديدة والمحافظة على استمراريتها؟"
+    },
+    "questions": {
+      "moreBtn": "معرفة المزيد",
+      "title": "الأسئلة الشائعة:"
+    },
+    "welcome": {
+      "afternoon": "مساء الخير",
+      "morning": "صباح الخير",
+      "night": "مساء الخير",
+      "noon": "نهاراً"
+    }
+  },
   "header": "مرحبًا بكم في الاستخدام",
   "pickAgent": "أو اختيار قالب مساعد من القائمة التالية",
   "skip": "تخطى الإنشاء",
