--- a/locales/bg-BG/welcome.json
+++ b/locales/bg-BG/welcome.json
@@ -4,6 +4,40 @@
     "market": "Пазар",
     "start": "Започни сега"
   },
+  "guide": {
+    "agents": {
+      "replaceBtn": "Смени",
+      "title": "Препоръчване на нови асистенти:"
+    },
+    "defaultMessage": "Аз съм LobeChat, твоят личен интелигентен асистент. Как мога да ти помогна днес?\nАко искаш по-професионален или персонализиран асистент, кликни на `+` за създаване на персонализиран асистент.",
+    "qa": {
+      "q01": "Какъв модел сте и какви са вашите функции?",
+      "q02": "Как да напиша увлекателна статия или история?",
+      "q03": "Как да се подготвям за отлична презентация или доклад?",
+      "q04": "Как да развивам ефективни учебни навици и стратегии?",
+      "q05": "Как да създам ефективно учебно пространство у дома?",
+      "q06": "Кои виждания при четене могат да помогнат за разбиране на сложни текстове?",
+      "q07": "Как да запазя мотивацията за учене в заетия живот и работа?",
+      "q08": "Как да приемам критика с достойнство и да поуча от нея?",
+      "q09": "Как да повиша ефективността на езиковото учене?",
+      "q10": "Как да управлявам и намалим тревожността преди изпит?",
+      "q11": "Как да балансирам работата, ученето и личния живот?",
+      "q12": "Как да се представям чудесно на интервю?",
+      "q13": "Как да поддържам и развивам професионални контакти?",
+      "q14": "Как да оптимизирам личното си резюме, за да привлеча вниманието на работодателя?",
+      "q15": "Как да овладея нова умение и да го поддържам непрекъснато?"
+    },
+    "questions": {
+      "moreBtn": "Научи повече",
+      "title": "Често задавани въпроси:"
+    },
+    "welcome": {
+      "afternoon": "Добър ден",
+      "morning": "Добро утро",
+      "night": "Добър вечер",
+      "noon": "Добър ден"
+    }
+  },
   "header": "Добре дошли",
   "pickAgent": "Или изберете от следните шаблони на агенти",
   "skip": "Пропусни създаването",
