--- a/locales/ja-JP/welcome.json
+++ b/locales/ja-JP/welcome.json
@@ -1,8 +1,42 @@
 {
   "button": {
     "import": "設定をインポート",
-    "market": "マーケットを見る",
+    "market": "市場を見る",
     "start": "すぐに開始"
+  },
+  "guide": {
+    "agents": {
+      "replaceBtn": "別のグループ",
+      "title": "新しいアシスタントのおすすめ："
+    },
+    "defaultMessage": "私はLobeChat、あなたの個人的なスマートアシスタントです。今日は何を手伝えますか？\nより専門的またはカスタマイズされたアシスタントが必要な場合は、`+` をクリックしてカスタムアシスタントを作成してください。",
+    "qa": {
+      "q01": "あなたはどのようなモデルですか？どのような機能がありますか？",
+      "q02": "魅力的な記事や物語を書くにはどうすればよいですか？",
+      "q03": "優れたスピーチやレポートを準備するにはどうすればよいですか？",
+      "q04": "効果的な学習習慣と戦略を開発するにはどうすればよいですか？",
+      "q05": "効率的な学習空間を自宅に作るにはどうすればよいですか？",
+      "q06": "複雑なテキストを理解するための読書戦略は何ですか？",
+      "q07": "忙しい生活や仕事の中で学びのモチベーションを保つ方法はありますか？",
+      "q08": "批評を優雅に受け入れ、そこから学ぶ方法はありますか？",
+      "q09": "言語学習の効率を高めるにはどうすればよいですか？",
+      "q10": "試験の焦りを管理し軽減するにはどうすればよいですか？",
+      "q11": "仕事、学習、個人生活のバランスを取るにはどうすればよいですか？",
+      "q12": "インタビューで優れたパフォーマンスをするにはどうすればよいですか？",
+      "q13": "キャリアの人脈を維持および発展させるにはどうすればよいですか？",
+      "q14": "雇用主の注意を引くために個人的な履歴書を最適化するにはどうすればよいですか？",
+      "q15": "新しいスキルを身につけ、持続させるにはどうすればよいですか？"
+    },
+    "questions": {
+      "moreBtn": "さらに詳しく",
+      "title": "よくある質問："
+    },
+    "welcome": {
+      "afternoon": "こんにちは",
+      "morning": "おはようございます",
+      "night": "こんばんは",
+      "noon": "こんにちは"
+    }
   },
   "header": "ようこそ",
   "pickAgent": "または以下のエージェントテンプレートから選択してください",
