--- a/locales/ko-KR/welcome.json
+++ b/locales/ko-KR/welcome.json
@@ -4,6 +4,40 @@
     "market": "시장 구경하기",
     "start": "지금 시작"
   },
+  "guide": {
+    "agents": {
+      "replaceBtn": "다른 것으로 바꾸기",
+      "title": "새로운 보조 추천: "
+    },
+    "defaultMessage": "나는 LobeChat, 당신의 개인 지능형 보조입니다. 오늘은 무엇을 도와드릴까요?\n더 전문적이거나 맞춤형 보조가 필요하다면 `+`를 클릭하여 사용자 정의 보조를 만들 수 있습니다.",
+    "qa": {
+      "q01": "어떤 모델이며 기능이 무엇인가요",
+      "q02": "매력적인 글이나 이야기를 어떻게 작성하나요?",
+      "q03": "우수한 프레젠테이션이나 보고서를 준비하는 방법은 무엇인가요?",
+      "q04": "효과적인 학습 습관과 전략을 개발하는 방법은 무엇인가요?",
+      "q05": "가정에서 효율적인 학습 공간을 조성하는 방법은 무엇인가요?",
+      "q06": "복잡한 텍스트를 이해하기 위한 어떤 독서 전략이 도움이 될까요?",
+      "q07": "바쁜 일상과 업무에서 학습 동기를 유지하는 방법은 무엇인가요?",
+      "q08": "비판을 우아하게 받아들이고 그로부터 배우는 방법은 무엇인가요?",
+      "q09": "언어 학습 효율을 높이는 방법은 무엇인가요?",
+      "q10": "시험 공포를 관리하고 완화하는 방법은 무엇인가요?",
+      "q11": "일, 학습 및 개인 생활을 어떻게 균형있게 유지할까요?",
+      "q12": "면접에서 우수한 성과를 내는 방법은 무엇인가요?",
+      "q13": "직업적 연결을 유지하고 발전시키는 방법은 무엇인가요?",
+      "q14": "용인자의 주목을 끌기 위해 개인 이력서를 어떻게 최적화할까요?",
+      "q15": "어떻게 새로운 기술을 배우고 지속성을 유지할까요?"
+    },
+    "questions": {
+      "moreBtn": "더 알아보기",
+      "title": "자주 묻는 질문: "
+    },
+    "welcome": {
+      "afternoon": "안녕하세요",
+      "morning": "좋은 아침",
+      "night": "안녕히 주무세요",
+      "noon": "안녕하세요"
+    }
+  },
   "header": "환영합니다",
   "pickAgent": "또는 다음 도우미 템플릿 중 하나를 선택하세요",
   "skip": "생성 건너뛰기",
