--- a/locales/ru-RU/welcome.json
+++ b/locales/ru-RU/welcome.json
@@ -4,6 +4,40 @@
     "market": "Посетить рынок",
     "start": "Начать"
   },
+  "guide": {
+    "agents": {
+      "replaceBtn": "Заменить",
+      "title": "Рекомендации новых агентов:"
+    },
+    "defaultMessage": "Я LobeChat, ваш персональный интеллектуальный помощник. Чем я могу помочь вам сегодня?\nЕсли вам нужна более профессиональная или настраиваемая помощь, нажмите на `+` для создания пользовательского помощника.",
+    "qa": {
+      "q01": "Какая модель у вас есть и какие у нее функции?",
+      "q02": "Как написать захватывающую статью или историю?",
+      "q03": "Как подготовиться к выдающемуся выступлению или отчету?",
+      "q04": "Как развить эффективные учебные привычки и стратегии?",
+      "q05": "Как создать эффективное учебное пространство дома?",
+      "q06": "Какая стратегия чтения помогает понять сложные тексты?",
+      "q07": "Как поддерживать мотивацию к обучению в оживленной жизни и работе?",
+      "q08": "Как элегантно принимать критику и извлекать из нее уроки?",
+      "q09": "Как повысить эффективность изучения языков?",
+      "q10": "Как управлять и снижать тревогу перед экзаменами?",
+      "q11": "Как балансировать работу, обучение и личную жизнь?",
+      "q12": "Как выступить на собеседовании с блеском?",
+      "q13": "Как поддерживать и развивать деловые связи?",
+      "q14": "Как оптимизировать резюме, чтобы привлечь внимание работодателя?",
+      "q15": "Как освоить новые навыки и сохранить их долгосрочность?"
+    },
+    "questions": {
+      "moreBtn": "Узнать больше",
+      "title": "Часто задаваемые вопросы:"
+    },
+    "welcome": {
+      "afternoon": "Добрый день",
+      "morning": "Доброе утро",
+      "night": "Добрый вечер",
+      "noon": "Добрый день"
+    }
+  },
   "header": "Привет",
   "pickAgent": "Или выберите один из следующих шаблонов помощника",
   "skip": "Пропустить",
