--- a/locales/zh-CN/welcome.json
+++ b/locales/zh-CN/welcome.json
@@ -4,6 +4,40 @@
     "market": "逛逛市场",
     "start": "立即开始"
   },
+  "guide": {
+    "agents": {
+      "replaceBtn": "换一批",
+      "title": "新增助理推荐："
+    },
+    "defaultMessage": "我是 LobeChat 你的私人智能助理，我今天能帮你做什么？\n如果需要获得更加专业或定制的助手，可以点击 `+` 创建自定义助手",
+    "qa": {
+      "q01": "你是什么模型，有什么功能吗",
+      "q02": "如何写一篇引人入胜的文章或故事?",
+      "q03": "应如何准备出色的演讲或报告?",
+      "q04": "如何发展有效的学习习惯和策略?",
+      "q05": "如何在家中创设一个高效的学习空间?",
+      "q06": "怎样的阅读策略可以帮助理解复杂的文本?",
+      "q07": "如何保持在繁忙的生活和工作中的学习动力?",
+      "q08": "如何优雅地接受批评并从中学习?",
+      "q09": "如何提高语言学习效率?",
+      "q10": "如何管理和减轻考试焦虑?",
+      "q11": "应如何平衡工作，学习和个人生活?",
+      "q12": "如何在面试中表现出色?",
+      "q13": "如何维护和发展职业人脉?",
+      "q14": "如何优化个人简历以吸引雇主注意?",
+      "q15": "如何习得一种新技能并保持其持续性?"
+    },
+    "questions": {
+      "moreBtn": "了解更多",
+      "title": "大家都在问："
+    },
+    "welcome": {
+      "afternoon": "下午好",
+      "morning": "早上好",
+      "night": "晚上好",
+      "noon": "中午好"
+    }
+  },
   "header": "欢迎使用",
   "pickAgent": "或从下列助手模板选择",
   "skip": "跳过创建",
