--- a/locales/zh-TW/welcome.json
+++ b/locales/zh-TW/welcome.json
@@ -4,6 +4,40 @@
     "market": "逛逛市場",
     "start": "馬上開始"
   },
+  "guide": {
+    "agents": {
+      "replaceBtn": "換一批",
+      "title": "新增助理推薦："
+    },
+    "defaultMessage": "我是 LobeChat 你的私人智能助理，我今天能幫你做什麼？\n如果需要獲得更加專業或定制的助手，可以點擊 `+` 創建自定義助手",
+    "qa": {
+      "q01": "你是什麼模型，有什麼功能嗎",
+      "q02": "如何寫一篇引人入勝的文章或故事?",
+      "q03": "應如何準備出色的演講或報告?",
+      "q04": "如何發展有效的學習習慣和策略?",
+      "q05": "如何在家中創設一個高效的學習空間?",
+      "q06": "怎樣的閱讀策略可以幫助理解複雜的文本?",
+      "q07": "如何保持在繁忙的生活和工作中的學習動力?",
+      "q08": "如何優雅地接受批評並從中學習?",
+      "q09": "如何提高語言學習效率?",
+      "q10": "如何管理和減輕考試焦慮?",
+      "q11": "應如何平衡工作，學習和個人生活?",
+      "q12": "如何在面試中表現出色?",
+      "q13": "如何維護和發展職業人脈?",
+      "q14": "如何優化個人簡歷以吸引雇主注意?",
+      "q15": "如何習得一種新技能並保持其持續性?"
+    },
+    "questions": {
+      "moreBtn": "了解更多",
+      "title": "大家都在問："
+    },
+    "welcome": {
+      "afternoon": "下午好",
+      "morning": "早上好",
+      "night": "晚上好",
+      "noon": "中午好"
+    }
+  },
   "header": "歡迎",
   "pickAgent": "或從以下助理範本中選擇",
   "skip": "跳過建立步驟",
