--- a/locales/es-ES/welcome.json
+++ b/locales/es-ES/welcome.json
@@ -4,6 +4,40 @@
     "market": "Explorar el mercado",
     "start": "Comenzar ahora"
   },
+  "guide": {
+    "agents": {
+      "replaceBtn": "Cambiar grupo",
+      "title": "Recomendación de asistentes nuevos:"
+    },
+    "defaultMessage": "Soy LobeChat, tu asistente inteligente personal. ¿En qué puedo ayudarte hoy?\nSi necesitas un asistente más profesional o personalizado, haz clic en `+` para crear un asistente personalizado.",
+    "qa": {
+      "q01": "¿Qué modelo eres y qué funciones tienes?",
+      "q02": "¿Cómo escribir un artículo o historia cautivadora?",
+      "q03": "¿Cómo preparar un discurso o presentación excelente?",
+      "q04": "¿Cómo desarrollar hábitos y estrategias de estudio efectivas?",
+      "q05": "¿Cómo crear un espacio de estudio eficiente en casa?",
+      "q06": "¿Qué estrategias de lectura ayudan a comprender textos complejos?",
+      "q07": "¿Cómo mantener la motivación para el aprendizaje en una vida y trabajo ocupados?",
+      "q08": "¿Cómo aceptar críticas de manera elegante y aprender de ellas?",
+      "q09": "¿Cómo mejorar la eficiencia en el aprendizaje de idiomas?",
+      "q10": "¿Cómo gestionar y reducir la ansiedad ante los exámenes?",
+      "q11": "¿Cómo equilibrar trabajo, estudios y vida personal?",
+      "q12": "¿Cómo destacar en una entrevista?",
+      "q13": "¿Cómo mantener y desarrollar una red de contactos profesionales?",
+      "q14": "¿Cómo optimizar el currículum para llamar la atención de los empleadores?",
+      "q15": "¿Cómo adquirir una nueva habilidad y mantener su continuidad?"
+    },
+    "questions": {
+      "moreBtn": "Saber más",
+      "title": "Preguntas frecuentes:"
+    },
+    "welcome": {
+      "afternoon": "Buenas tardes",
+      "morning": "Buenos días",
+      "night": "Buenas noches",
+      "noon": "Buen mediodía"
+    }
+  },
   "header": "Bienvenido/a",
   "pickAgent": "O elige una plantilla de asistente a continuación",
   "skip": "Saltar",
